# crossplane-forge

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  flake.nix
src/: backend.rs  body_signatures.rs  controller_gen.rs  crd.rs  deepcopy_gen.rs  error.rs  lib.rs  managed_methods_gen.rs  provider_gen.rs  types_gen.rs
